[package]
name = "swym"
version = "0.1.0-preview"
authors = ["mtak-"]
edition = "2018"
license = "MIT"
keywords = ["transactional", "stm", "transaction", "memory", "atomic"]
categories = ["concurrency", "data-structures"]
description = "Transactional memory for rust"
repository = "https://github.com/mtak-/swym"
homepage = "https://github.com/mtak-/swym"
documentation = "https://docs.rs/swym"

[package.metadata.docs.rs]
features = ["rtm"]
default-target = "x86_64-unknown-linux-gnu"
rustc-args = ["-Ctarget-feature=+rtm"]

[features]
default = []
debug-alloc = []
rtm = ["swym-htm/rtm"]
stats = []

[dependencies]
lock_api = "0.1.5"
swym-htm = { path = "./swym-htm", version = "0.1.0" }

[dev-dependencies]
crossbeam-utils = "0.6.5"
jemallocator = "0.3.0"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[workspace]
members = [
    ".",
    "swym-htm",
    "swym-rbtree",
]