[package]
name = "swym"
version = "0.1.0-preview"
authors = ["mtak-"]
edition = "2018"
license = "MIT"
keywords = ["transactional", "stm", "transaction", "memory", "atomic"]
categories = ["concurrency", "data-structures"]
description = "Transactional memory for rust"
repository = "https://github.com/mtak-/swym"
homepage = "https://github.com/mtak-/swym"
documentation = "https://docs.rs/swym"

[package.metadata.docs.rs]
features = ["nightly"]
default-target = "x86_64-unknown-linux-gnu"
rustc-args = ["-Ctarget-feature=+rtm"]

[features]
debug-alloc = ["jemallocator/debug"]
default = []
nightly = [
    "crossbeam-utils/nightly",
    "lock_api/nightly",
    "nudge/nightly",
    "parking_lot/nightly",
    "parking_lot_core/nightly",
    "phoenix-tls/nightly",
    "swym-htm/nightly",
]
stats = []

[dependencies]
cfg-if = "1.0.0"
crossbeam-utils = "0.8.5"
fxhash = "0.2.1"
freeze = { path = "./freeze" }
lazy_static = "1.4.0"
lock_api = "0.4"
nudge = "0.2.1"
parking_lot = "0.11"
parking_lot_core = "0.8"
phoenix-tls = { path = "../phoenix-tls" }
swym-htm = { path = "./swym-htm", version = "0.1.0" }

[dev-dependencies]
jemallocator = "0.3.2"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[workspace]
members = [
    ".",
    "freeze",
    "swym-htm",
    "swym-rbtree",
]
