[package]
name = "swym-htm"
version = "0.1.0"
authors = ["tyler <tyler@brainiumstudios.com>"]
edition = "2018"
license = "MIT"
keywords = ["transactional", "htm", "transaction", "memory", "hardware"]
categories = ["concurrency", "data-structures"]
description = "Hardware transactional memory for rust"
repository = "https://github.com/mtak-/swym"
homepage = "https://github.com/mtak-/swym"

[package.metadata.docs.rs]
features = ["nightly"]
default-target = "x86_64-unknown-linux-gnu"
rustc-args = ["-Ctarget-feature=+rtm"]

[features]
default = ["nightly"]
htm = []
nightly = []

[dependencies]
cfg-if = "0.1.9"
nudge = "0.2.1"
