[package]
name = "swym-rbtree"
version = "0.1.0"
authors = ["tyler <tyler@brainiumstudios.com>"]
edition = "2018"
publish = false

[features]
debug-alloc = ["jemallocator/debug"]
default = []
nightly = ["freeze/nightly", "swym/nightly"]
stats = ["swym/stats"]

[dependencies]
freeze = { path = "../../freeze" }
swym = { path = "../" }

[dev-dependencies]
criterion = { version = "0.3.1", default-features = false }
crossbeam-utils = "0.7.0"
jemallocator = "0.3.2"
rand = "0.7.3"

[[bench]]
name = "rbtree"
harness = false
