[package]
name = "swym-rbtree"
version = "0.1.0"
authors = ["tyler <tyler@brainiumstudios.com>"]
edition = "2018"
publish = false

[features]
debug-alloc = ["jemallocator/debug"]
default = []
nightly = ["freeze/nightly", "swym/nightly"]
stats = ["swym/stats"]

[dependencies]
freeze = { git = "https://github.com/mtak-/freeze" }
swym = { path = "../" }

[dev-dependencies]
criterion = { version = "0.3.5", default-features = false }
crossbeam-utils = "0.8"
jemallocator = "0.3.2"
rand = "0.8"

[[bench]]
name = "rbtree"
harness = false
